# q-lang

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  blank.s  calculator.qq  compile.zsh  compile_test.sh  compiler  complex.qq  data.qq  for.qq  function.qq  go.mod  hello_world.qq  hello_world.s  hello_world_linux.s  hello_world_mac.s  lldb_notes.txt  ninja.build.sh  print_integer_mac.s  program  program.cpp  program.q  program.qq  program.s  q  q-linux  q-mac  ranged_for.qq  run.zsh  testing.cpp  testing.s
examples/: arrays.qq  calculator.qq  data.qq  for.qq  function.qq  hello_world_mac.s  system.qq
parser/: parser.go
parser/node/: node.go
qlang/: builtins_gen.go  flow_gen.go  func_gen.go  gen.go  main.go  nodes.go  parse.go  prog.go  scanner.go  scope.go  text.go  text_test.go  tokenizer_test.go
qlang/parser/: parser.go
qlang/parser/node/: constant.go  defnodes.go  evalnodes.go  funcnodes.go  node.go  varnodes.go
qlang/parser/util/: scanner.go  strings.go
src/: main.cpp
src/compiler/: compiler.cpp  compiler.hpp
src/lexer/: lexer.hpp
src/parse/: parse_node.cpp  parse_node.hpp  parser.cpp  parser.hpp
src/parse/node/: abstract_node.cpp  abstract_node.hpp  master_node.cpp  master_node.hpp  parse_node.cpp  parse_node.hpp
src/parser/: parser.cpp  parser.hpp
src/parser/node/: abstract_node.cpp  abstract_node.hpp  def_function_node.cpp  def_function_node.hpp  impl_function_node.cpp  impl_function_node.hpp  master_node.hpp  package_node.cpp  package_node.hpp  parse_node.cpp  parse_node.hpp
src/parser/node/implementation/: integer_node.cpp  integer_node.hpp  line_node.cpp  line_node.hpp  variable_node.hpp
src/parser/node/structure/: def_func_node.cpp  def_func_node.hpp  impl_func_node.cpp  impl_func_node.hpp  package_node.cpp  package_node.hpp  parse_with_descriptor_node.cpp  parse_with_descriptor_node.hpp  variable_node.cpp  variable_node.hpp
src/util/: read.cpp  read.hpp  terminal_color.hpp
